--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "react-stars": "^2.2.5",
     "web-vitals": "^4.2.4"
